# jetshow

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  abc_simulations.py  bitbucket-pipelines.yml  bk_jet_3d.py  cmake_install.cmake  compile_commands.json  config.json  example_simple.py  fourier.py  jetmodel.py  jetshow  jetshow.cbp  jetshow.kdev4  join_history.py  k_distribution.py  mf_simulations.py  mojave_cores.py  plotting.py  pre-commit.sh  predict_image_params.py  radioastron.py  run_tests.sh  setup.py  shift_vs_los.py  shifts_distribution.py  simulations.py  single_run_09.py  stripes_two_freqs.py  tb_distribution.py  test_difmap.py  use_external_models.py  utils.py
.kdev4/: jetshow.kdev4
include/: BField.h  Bfield.h  Builder.cpp  Builder.h  Cell.h  Cells.h  Cilinder.h  Cone.h  Cylinder.h  Geometry.h  Image.h  ImagePlane.h  Intersection.h  Jet.h  NField.h  Observation.h  Parabaloid.h  ParabaloidCone.h  Pixel.h  Ray.h  SimulationInterpolater.h  System.h  VField.h  example.h  geometry.h  jet.h  linspace.h  logspace.h  nfields.h  utils.h  vfields.h
src/: BField.cpp  Bfield.cpp  Cell.cpp  Cells.cpp  Cilinder.cpp  Cone.cpp  Cylinder.cpp  Geometry.cpp  Image.cpp  ImagePlane.cpp  Intersection.cpp  Jet.cpp  NField.cpp  Observation.cpp  Parabaloid.cpp  ParabaloidCone.cpp  Pixel.cpp  Ray.cpp  SimulationInterpolater.cpp  System.cpp  VField.cpp  bfields.cpp  example.cpp  geometry.cpp  jet.cpp  main.cpp  pyjetshow.cpp  pyjetshow_toroidal.cpp  utils.cpp
tests/: simple_test.cpp
